force-app/main/default/objects/Krow__Klient_Filter_Settings__c/Krow__Klient_Filter_Settings__c.object-meta.xml
<CustomObject>
    <label>Klient Filter Settings</label>
    <nameField>
        <label>Klient Filter Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Klient Filter Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>