force-app/main/default/objects/Krow__Klient_Filter_Settings__c/fields/Krow__Filter_Body__c.field-meta.xml
<CustomField>
    <fullName>Krow__Filter_Body__c</fullName>
    <label>Filter Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>