force-app/main/default/objects/Krow__Klient_Filter_Settings__c/fields/Krow__Filter_Type__c.field-meta.xml
<CustomField>
    <fullName>Krow__Filter_Type__c</fullName>
    <label>Filter Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gantt</fullName>
            </value>
            <value>
                <fullName>Board</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>